--- a/Web-Server/src/main/resources/static/css/main.css
+++ b/Web-Server/src/main/resources/static/css/main.css
@@ -38,8 +38,8 @@ footer, header, hgroup, menu, nav, section {
     padding: 2px;
     resize: both;
     margin-top:10px;
-    width : 100%;
-    height : 100%;
+    width : 400px;
+    height : 400px;
 }
 
 button {
