--- a/Web-Server/src/main/resources/templates/dashboard.html
+++ b/Web-Server/src/main/resources/templates/dashboard.html
@@ -276,7 +276,7 @@
 			</li>
 			<li><div id="bold" class="btn-change-text">굵게</div></li>
 			<li><div id="italic" class="btn-change-text">기울임</div></li>
-			<li><div id="underLine" class="btn-change-text">밑</div></li>
+			<li><div id="underLine" class="btn-change-text">밑줄</div></li>
 		</ul>
 		<!-- Scripts -->
 			<script src="/js/jquery.min.js"></script>
